Upload SAS Created

--- a/media-library-backend.csproj
+++ b/media-library-backend.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>media_library_backend</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
   </ItemGroup>
   <ItemGroup>
