--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,22 +4,14 @@
     {
       "label": "clean",
       "command": "dotnet",
-      "args": [
-        "clean",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
+      "args": ["clean", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
       "type": "process",
       "problemMatcher": "$msCompile"
     },
     {
       "label": "build",
       "command": "dotnet",
-      "args": [
-        "build",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
+      "args": ["build", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
       "type": "process",
       "dependsOn": "clean",
       "group": {
@@ -31,26 +23,14 @@
     {
       "label": "clean release",
       "command": "dotnet",
-      "args": [
-        "clean",
-        "--configuration",
-        "Release",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
+      "args": ["clean", "--configuration", "Release", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
       "type": "process",
       "problemMatcher": "$msCompile"
     },
     {
       "label": "publish",
       "command": "dotnet",
-      "args": [
-        "publish",
-        "--configuration",
-        "Release",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
+      "args": ["publish", "--configuration", "Release", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
       "type": "process",
       "dependsOn": "clean release",
       "problemMatcher": "$msCompile"
@@ -61,7 +41,7 @@
       "options": {
         "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1"
       },
-      "command": "host start",
+      "command": "host start --port 7072",
       "isBackground": true,
       "problemMatcher": "$func-dotnet-watch"
     }
