--- a/media-library-backend.csproj
+++ b/media-library-backend.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
-    <PackageReference Include="WebGate.Azure.CloudTableUtils" Version="1.0.0-rc2" />
+    <PackageReference Include="WebGate.Azure.CloudTableUtils" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
